[package]
name = "rustimage"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
rayon = "1.5.1"
clap = "4.5.39"
tikv-jemallocator = "0.6.0"
memory-stats = { version = "1.1.0", features = ["always_use_statm"] }
thousands = "0.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true


